// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`envCommand should fail with no value 1`] = `
{
  "errorCode": "E_NO_ENV_VALUE",
  "errorParams": [
    "NODE_ENV",
  ],
  "logCalls": [],
  "promptArgsCalls": [
    [],
  ],
}
`;

exports[`envCommand should work 1`] = `
{
  "logCalls": [
    [
      "info",
      "test",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "result": undefined,
}
`;

exports[`envCommand should work with a default value 1`] = `
{
  "logCalls": [
    [
      "info",
      "lol",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "result": undefined,
}
`;
